.k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: al-furqan
  namespace: al-furqan
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - al-furqan.dragonteam.dev
      secretName: al-furqan-tls
  rules:
    - host: al-furqan.dragonteam.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: al-furqan
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch
  namespace: al-furqan
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - elasticsearch.dragonteam.dev
      secretName: elasticsearch-tls
  rules:
    - host: elasticsearch.dragonteam.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elasticsearch-http
                port:
                  number: 9200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neo4j
  namespace: al-furqan
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - neo4j.dragonteam.dev
      secretName: neo4j-tls
  rules:
    - host: neo4j.dragonteam.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: neo4j-http
                port:
                  number: 7474
